# planner-researcher-verifier

./: .gitignore  README.md  math_agent.py  pyproject.toml  sympy_tools.py  ui_app.py
lean_verifier/: LeanVerifier.lean  README.md  SpeedTest.lean  lake-manifest.json  lakefile.toml
math_assistant/: __init__.py  math_agent.py  sympy_tools.py  trace_utils.py  ui_app.py
