[tool.poetry]
name = "math-assistant"
version = "0.1.0"
description = "An LLM-powered assistant that uses SymPy, and the Lean engine for research-grade working-through-the-tedium."
authors = ["dimash <dimas.tabayev@gmail.com>"]
readme = "README.md"
packages = [{ include = "math_assistant" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# Core math
sympy = ">=1.14.0,<2.0.0"
mpmath = ">=1.3.0,<2.0.0"

# Agent framework
autogen = ">=0.10.1,<0.11.0"

# UI + config
streamlit = ">=1.39.0,<2.0.0"
python-dotenv = ">=1.2.1,<2.0.0"

# Needed because `math_assistant/ui_app.py` imports `BadRequestError` from `openai`
openai = ">=1.0.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
